--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2>
+          <h1>
+<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h1>
+
+<p><br></p>
+
+<h2>
 <a id="groups" class="anchor" href="#groups" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://blake-wilson.github.io/groups">Groups</a>
 </h2>
         </section>
