Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
@@ -35,6 +35,10 @@
 
 <h2>
 <a id="groups" class="anchor" href="#groups" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://blake-wilson.github.io/groups">Groups</a>
+</h2>
+
+<h2>
+<a id="diffeqer-differential-equations-solution-plotter" class="anchor" href="#diffeqer-differential-equations-solution-plotter" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://synthetic-verve-88502.appspot.com/html/app.html">Diffeqer (differential equations solution plotter)</a>
 </h2>
         </section>
 
